--- a/.github/workflows/python-autoCheck.yml
+++ b/.github/workflows/python-autoCheck.yml
@@ -2,30 +2,29 @@ name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-    - name: Run Update Python Script 
-      run: |
-        python autoCheck/auto_check.py
-    - name: Run Update README.md File
-      run: |
-        git add .
-        git diff
-        git commit -m "Auto Update README.md file"
-        git push
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+      - name: Run Update Python Script
+        run: |
+          python autoCheck/auto_check.py
+      - name: Run Update README.md File
+        run: |
+          git add .
+          git diff
+          git commit -m "Auto Update README.md file"
+          git push
