--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,5 +24,7 @@ jobs:
         run: |
           git add .
           git diff
+          git config user.name "kdongsu5509"
+          git config user.email "kod6170@gamil.com"
           git commit -m "Auto Update README.md file"
           git push
