--- a/.github/workflows/auto_state_update_at_readme.yml
+++ b/.github/workflows/auto_state_update_at_readme.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -17,9 +17,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-      - name: Change working directory
-        run: cd Haedal_algorithmstrudy
-        working-directory: ./Haedal_algorithmstrudy
       - name: Run Update Python Script
         run: |
           python autoCheck/auto_check.py
